[gd_scene load_steps=8 format=3 uid="uid://t0rlq68s0wqb"]

[ext_resource type="Script" path="res://Media/Scripts/menu.gd" id="1_5uo84"]
[ext_resource type="PackedScene" uid="uid://6o7rrbfjk73d" path="res://Media/Scenes/custom_cursor.tscn" id="2_ow48a"]
[ext_resource type="FontFile" uid="uid://b6b8yj3tippe5" path="res://Media/Other/ST-Brigantina-free.otf" id="3_0u766"]
[ext_resource type="StyleBox" uid="uid://dy4h68fhwxxop" path="res://Media/Other/background_theme1.tres" id="4_yi517"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pbf2c"]
bg_color = Color(0.612774, 0.157246, 0, 1)
border_width_bottom = 10
border_color = Color(0.313543, 0.063596, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ipqg1"]
bg_color = Color(0.45875, 0.10829, 0, 1)
border_width_bottom = 10
border_color = Color(0.313543, 0.063596, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_5g4a0"]
default_font = ExtResource("3_0u766")
default_font_size = 50
Button/colors/font_color = Color(0.954779, 0.703409, 0.6199, 1)
Button/colors/font_focus_color = Color(0.961421, 0.749727, 0.680305, 1)
Button/colors/font_hover_color = Color(0.960784, 0.74902, 0.678431, 1)
Button/colors/font_hover_pressed_color = Color(0.960784, 0.74902, 0.678431, 1)
Button/colors/font_pressed_color = Color(0.960784, 0.74902, 0.678431, 1)
Button/styles/focus = SubResource("StyleBoxFlat_pbf2c")
Button/styles/hover = SubResource("StyleBoxFlat_pbf2c")
Button/styles/hover_mirrored = SubResource("StyleBoxFlat_pbf2c")
Button/styles/hover_pressed = SubResource("StyleBoxFlat_pbf2c")
Button/styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_ipqg1")
Button/styles/normal = SubResource("StyleBoxFlat_ipqg1")
Button/styles/normal_mirrored = SubResource("StyleBoxFlat_ipqg1")
Button/styles/pressed = SubResource("StyleBoxFlat_ipqg1")
Button/styles/pressed_mirrored = SubResource("StyleBoxFlat_ipqg1")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5uo84")

[node name="Background" type="ColorRect" parent="."]
z_index = -2
layout_mode = 1
anchors_preset = -1
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.247059, 0.0666667, 0.0470588, 1)
metadata/_edit_use_anchors_ = true

[node name="CustomCursor" parent="." instance=ExtResource("2_ow48a")]
z_index = 4096

[node name="Header" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.148
anchor_right = 0.5
anchor_bottom = 0.148
offset_left = -320.0
offset_top = -223.904
offset_right = 320.0
offset_bottom = 287.096
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(320, 256)
theme_override_colors/font_color = Color(0.612168, 0.391967, 0.365666, 1)
theme_override_fonts/font = ExtResource("3_0u766")
theme_override_font_sizes/font_size = 500
text = "Пастор"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterButtons" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.667
anchor_right = 0.5
anchor_bottom = 0.667
offset_left = -128.0
offset_top = -176.216
offset_right = 128.0
offset_bottom = 175.784
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(128, 176)
theme = SubResource("Theme_5g4a0")

[node name="PlayButton" type="Button" parent="CenterButtons"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 64.0
text = "Играть"
metadata/_edit_lock_ = true

[node name="SettingsButton" type="Button" parent="CenterButtons"]
layout_mode = 0
offset_top = 96.0
offset_right = 256.0
offset_bottom = 160.0
text = "Настройки"
metadata/_edit_lock_ = true

[node name="CreditsButton" type="Button" parent="CenterButtons"]
layout_mode = 0
offset_top = 192.0
offset_right = 256.0
offset_bottom = 256.0
text = "Авторы"
metadata/_edit_lock_ = true

[node name="QuitButton" type="Button" parent="CenterButtons"]
layout_mode = 0
offset_top = 288.0
offset_right = 256.0
offset_bottom = 352.0
text = "Выход
"
metadata/_edit_lock_ = true

[node name="PlayButtons" type="Control" parent="."]
visible = false
z_index = 1
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.667
anchor_right = 0.5
anchor_bottom = 0.667
offset_left = -128.0
offset_top = -176.216
offset_right = 128.0
offset_bottom = 175.784
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(128, 176)
theme = SubResource("Theme_5g4a0")

[node name="ContinueButton" type="Button" parent="PlayButtons"]
z_index = 1
layout_mode = 0
offset_right = 256.0
offset_bottom = 64.0
text = "Продолжить"
metadata/_edit_lock_ = true

[node name="NewGameButton" type="Button" parent="PlayButtons"]
z_index = 1
layout_mode = 0
offset_top = 96.0
offset_right = 256.0
offset_bottom = 160.0
text = "Новая Игра"
metadata/_edit_lock_ = true

[node name="LoadGameButton" type="Button" parent="PlayButtons"]
z_index = 1
layout_mode = 0
offset_top = 192.0
offset_right = 256.0
offset_bottom = 256.0
text = "Загрузить Игру"
metadata/_edit_lock_ = true

[node name="hzButtton" type="Button" parent="PlayButtons"]
z_index = 1
layout_mode = 0
offset_top = 288.0
offset_right = 256.0
offset_bottom = 352.0
text = "хз"
metadata/_edit_lock_ = true

[node name="Background" type="Panel" parent="PlayButtons"]
layout_mode = 0
offset_left = -8.0
offset_top = -8.0
offset_right = 264.0
offset_bottom = 360.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("4_yi517")

[node name="Out" type="Area2D" parent="PlayButtons"]
collision_layer = 128
collision_mask = 128

[node name="Area" type="CollisionPolygon2D" parent="PlayButtons/Out"]
visible = false
polygon = PackedVector2Array(-704, -512, 960, -512, 960, 640, -704, 640, -704, -512, -8, -8, -8, 360, 264, 360, 264, -8, -8, -8)

[node name="OutterBackground" type="ColorRect" parent="PlayButtons"]
z_index = -1
layout_mode = 0
offset_left = -576.0
offset_top = -384.0
offset_right = 832.0
offset_bottom = 512.0
mouse_filter = 2
color = Color(0.178661, 0.0393413, 0.0255947, 0.389)

[node name="Settings" type="Control" parent="."]
visible = false
z_index = 1
layout_mode = 1
anchor_left = 0.014
anchor_top = 0.025
anchor_right = 0.986111
anchor_bottom = 0.975309
offset_left = -0.128
offset_top = -0.200001
metadata/_edit_use_anchors_ = true

[node name="MainBackground" type="Panel" parent="Settings"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.00012207
offset_bottom = -0.000244141
theme_override_styles/panel = ExtResource("4_yi517")

[node name="HeaderButtons" type="Control" parent="Settings"]
z_index = 1
anchors_preset = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 1104.0
offset_bottom = 80.0
theme = SubResource("Theme_5g4a0")

[node name="ExitButton3" type="Button" parent="Settings/HeaderButtons"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 62.0
text = "Назад"

[connection signal="pressed" from="CenterButtons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CenterButtons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CenterButtons/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CenterButtons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="body_entered" from="PlayButtons/Out" to="." method="_on_out_body_entered"]
[connection signal="body_exited" from="PlayButtons/Out" to="." method="_on_out_body_exited"]
[connection signal="pressed" from="Settings/HeaderButtons/ExitButton3" to="." method="_on_exit_button_3_pressed"]
